test/files/neg/wellkinded_wrongarity.check
wellkinded_wrongarity.scala:5: error: Pair takes two type parameters, expected: one
object mp extends Monad[Pair]
                        ^
one error found
